# caminho-da-fe-backend

./: .gitignore  ARCHITECTURE.md  README.md  alembic.ini  dev.sh  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: pipeline.yaml  python-app.yaml  python-app.yml
alembic/: env.py
alembic/versions/: 0b17df3c2ecf_add_telefone_users.py  1a38ad7c53c2_add_valor_padrao_pendente_coluna_status_.py  1cea1136b86a_create_users_table.py  6a1ad07901c1_add_novos_campos_contatos_novo_.py  963f27a01034_renomeado_a_coluna_cadidato_para_.py  a0e38abc4e1a_add_nome_to_users.py  b043f441bc13_contatos_novo_convertido_acoes.py  b69af2f7edfc_add_novo_convertidos.py  ba14dd6363c8_contatos_convertidos_acoes.py  ba14dd6363c8_description_of_migration.py  bf6951f621de_remove_contact_event_id_from_.py  cb09ef341a5b_merge_definitivo_alinhamento_banco.py
app/: INTEGRATION_GUIDE.md  main.py
app/core/: config.py  security.py
app/crud/: contatos_novos_convertidos_acoes.py  contatos_novos_convertidos_crud.py  novo_convertido.py  user.py
app/db/: session.py
app/exceptions/: __init__.py  app_exceptions.py
app/models/: __init__.py  contato.py  contatos_novos_convertidos_acoes.py  contatos_novos_convertidos_models.py  novo_convertido.py  user.py
app/routers/: __init__.py  auth_router.py  cep_router.py  contatos_novos_convertidos_acoes_router.py  contatos_novos_convertidos_router.py  discipulado_router.py  novos_convertidos_router.py  users_router.py
app/schemas/: common.py  contatos_novos_convertidos_acoes.py  (+3 more)
tests/: test_app_startup.py
(+8 files in other folders)
